@@ -329,8 +329,6 @@ flag is added to the command line).
 Halt if the emulated program attempts to access non-existing memory.
 .It Fl t
 Show a trace tree of all function calls being made.
-.It Fl U
-Enable slow_serial_interrupts_hack_for_linux.
 .It Fl X
 Use X11. This option enables graphical framebuffers.
 .It Fl Y Ar n
